tidied up CssUrlVersioner, tidied up sample

--- a/sample/index.cshtml
+++ b/sample/index.cshtml
@@ -13,6 +13,6 @@
 		<p><em>Note: this particular sample uses <a href="http://bundletransformer.codeplex.com/">Bundle Transformer</a> for TypeScript and minification (which is where the <i>JsTransformer</i> class comes from). Arraybracket.Bundling itself does not depend on this library.</em></p>
 		@System.Web.Optimization.Scripts.Render("~/Scripts/combined")
 		
-		<div class="asd"></div>
+		<div class="logo"></div>
 	</body>
 </html>
