--- a/sample/Styles/site.less
+++ b/sample/Styles/site.less
@@ -24,9 +24,8 @@ i {
 	color: #a33;
 }
 
-.asd {
+.logo {
 	width: 300px;
 	height: 300px;
-	background: url(a.png);
-	background-size: 100%;
+	background: url(logo.png) no-repeat;
 }
